k3s/ntfy/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  namespace: notifications
  labels:
    app: ntfy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:v2.19.2
          args: ["serve"]
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          volumeMounts:
            - mountPath: /var/cache/ntfy
              name: data-vol
      volumes:
        - name: data-vol
          hostPath:
            path: /opt/k3s-data/ntfy/data
            type: DirectoryOrCreate
