k3s/ntfy/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy-svc
  namespace: notifications
spec:
  selector:
    app: ntfy
  ports:
    - name: http
      port: 80
      targetPort: 80
