k3s/ntfy/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy-ingress
  namespace: notifications
spec:
  rules:
    - host: ntfy.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ntfy-svc
                port:
                  number: 80
    - host: ntfy.enoal.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ntfy-svc
                port:
                  number: 80
